// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`gardener-dashboard vpa should render the template with default values 1`] = `
{
  "apiVersion": "autoscaling.k8s.io/v1",
  "kind": "VerticalPodAutoscaler",
  "metadata": {
    "labels": {
      "app.kubernetes.io/component": "dashboard",
      "app.kubernetes.io/instance": "gardener-dashboard",
      "app.kubernetes.io/managed-by": "Helm",
      "app.kubernetes.io/name": "gardener-dashboard",
      "helm.sh/chart": "gardener-dashboard-runtime-0.1.0",
    },
    "name": "gardener-dashboard-vpa",
    "namespace": "garden",
  },
  "spec": {
    "resourcePolicy": {
      "containerPolicies": [
        {
          "containerName": "*",
          "controlledResources": [
            "cpu",
            "memory",
          ],
          "controlledValues": "RequestsOnly",
          "maxAllowed": {
            "cpu": "500m",
            "memory": "500Mi",
          },
          "minAllowed": {
            "cpu": "50m",
            "memory": "100Mi",
          },
        },
      ],
    },
    "targetRef": {
      "apiVersion": "apps/v1",
      "kind": "Deployment",
      "name": "gardener-dashboard",
    },
    "updatePolicy": {
      "updateMode": "Off",
    },
  },
}
`;

exports[`gardener-dashboard vpa should render the template with overwritten values 1`] = `
{
  "apiVersion": "autoscaling.k8s.io/v1",
  "kind": "VerticalPodAutoscaler",
  "metadata": {
    "labels": {
      "app.kubernetes.io/component": "dashboard",
      "app.kubernetes.io/instance": "gardener-dashboard",
      "app.kubernetes.io/managed-by": "Helm",
      "app.kubernetes.io/name": "gardener-dashboard",
      "helm.sh/chart": "gardener-dashboard-runtime-0.1.0",
    },
    "name": "gardener-dashboard-vpa",
    "namespace": "garden",
  },
  "spec": {
    "resourcePolicy": {
      "containerPolicies": [
        {
          "containerName": "*",
          "controlledResources": [
            "cpu",
            "memory",
          ],
          "controlledValues": "RequestsAndLimits",
          "maxAllowed": {
            "cpu": "1000m",
            "memory": "1200Mi",
          },
          "minAllowed": {
            "cpu": "30m",
            "memory": "60Mi",
          },
        },
      ],
    },
    "targetRef": {
      "apiVersion": "apps/v1",
      "kind": "Deployment",
      "name": "gardener-dashboard",
    },
    "updatePolicy": {
      "updateMode": "Auto",
    },
  },
}
`;
